@@ -3,6 +3,10 @@ PHP                                                                        NEWS
 
 Backported from 7.2.33
 
+- Core:
+  . Fixed bug #79877 (getimagesize function silently truncates after a null 
+    byte) (cmb)
+
 - Phar:
   . Fixed bug #79797 (Use of freed hash key in the phar_parse_zipfile
     function). (CVE-2020-7068) (cmb)
